2021-06-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tla.el (find-pdf-txt, find-pdf-txt-links)
	(ee-fnamepdf-to-fnametxt, find-pdf-text-insert): new functions.

	* eev-audiovideo.el (ee-find-mpv-audio): use "--start=mm:ss"
	instead of "--start mm:ss" (thanks to Erich Ruff for the bug fix!)

2021-06-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-xpdf-colon): new variable.
	(ee-find-xpdf-colon): new function.
	(ee-find-xpdf-page): use `ee-find-xpdf-colon'.
	(find-mupdf-page, ee-find-mupdf-page): new functions.
	(ee-find-mupdf-page-options): new variable.

	* eev-blinks.el (ee-struct-class, ee-struct-slot-names)
	(ee-struct-slot-names+, ee-struct-index-table)
	(ee-struct-to-string, find-estruct): new functions.

2021-06-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-compose-hash.el: new file.

	* eev-blinks.el (ee-hashtable-to-string, find-ehashtable): new
	functions.

2021-05-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdf-page): make it an alias to
	`find-xpdf-page'. Also, the comments in "eev-pdflike.el" now say
	that the recommened a way to change the default viewer is with a
	`defalias'; before this change the recommended way was with a
	`code-pdfbackend', that was much harder to understand.

	* eev-rcirc.el (ee-libera-server, ee-libera-ichannels)
	(ee-libera-achannels): new variables.
	(find-libera, find-libera-2a, find-libera-3a, eepitch-libera): new
	functions.

	* eev-intro.el (find-rcirc-intro): use LiberaChat insted of
	Freenode.

	* eev-tla.el: new file.

2021-05-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-insert): use `characterp' instead of
	`char-valid-p'.

2021-05-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-goto-position, ee-goto-rest): added a comment
	about curved single quotes.

2021-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (find-eevvlinksvideo): new function.
	(find-eevtestblocksvideo): renamed to `find-eevtestblsvideo'.
